--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           alt="Логотип - Оно тебе надо"
         />
       </a>
-      <address class="address">
+      <address class="address header__address">
         <a href="tel:+99995555555">+9 999 555 5555</a><br />
         <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br />
         <a>наб. Принсенграхт 263-<br />265, Амстердам</a>
@@ -63,7 +63,7 @@
           <p class="cover__description-text">
             аукцион вещей, в которые никто не верил
           </p>
-          <button class="bet-button">сделать ставку</button>
+          <button class="bet-button" type="button">сделать ставку</button>
         </div>
       </section>
       <!-- cover end -->
@@ -131,7 +131,7 @@
         <div class="about__column">
           <div class="about__logo">
             <img
-              src="/images/logo-white.svg"
+              src="./images/logo-white.svg"
               alt="Логотип - оно тебе надо"
               class="about__logo-image"
             />
@@ -187,7 +187,7 @@
         <li class="footer__social-list-item">
           <a href="#" class="footer__social-link">
             <img
-              src="/images/yt.svg"
+              src="./images/yt.svg"
               alt="Youtube"
               class="footer__social-icon"
             />
@@ -196,7 +196,7 @@
         <li class="footer__social-list-item">
           <a href="#" class="footer__social-link">
             <img
-              src="/images/vk.svg"
+              src="./images/vk.svg"
               alt="Вконтакте"
               class="footer__social-icon"
             />
@@ -205,7 +205,7 @@
         <li class="footer__social-list-item">
           <a href="#" class="footer__social-link">
             <img
-              src="/images/pinterest.svg"
+              src="./images/pinterest.svg"
               alt="Pinterest"
               class="footer__social-icon"
             />
